# Regime-Aware-Replay-Research

./: .gitignore  LICENSE  README.md  mechanism_experiment_plan_0627.md  pyproject.toml
ProjectPlan/: 2026-06-11_Regime_Aware_RL_Meeting_Brief.html  2026_07_04_Synthetic_Market_Design_Plan.md  2026_07_06_Weekly_Group_Meeting_Brief.html  Regime_Aware_Replay_Proposal.docx
configs/: sac_risk_control_grid_20260707.json  sac_tuning_grid.json
docs/: 2026-06-18_meeting_prep.md  DEER_finance_migration_manual.html  DEER_method_intuitive_explainer.html  dqn_replay_experiment_guide(1).html  dqn_replay_rule_based_result_report(1).html  regime_aware_replay_Outline_0626.html  regime_labeling_notes.md
report/: deer_uniform_tuning_framework_2026_07_08_zh.md  deer_uniform_tuning_results_2026_07_08_zh.md  mechanism_experiment_plan_0627.html  model_library_performance_gate_update_zh.md  recap_policy_safety_model_library_update_zh.md  regime_aware_replay_research_en.md  regime_aware_replay_research_zh.md  research_progress_update_2026_07_07_en.md  research_progress_update_2026_07_07_zh.md  research_progress_update_2026_07_08_en.md  research_progress_update_2026_07_08_zh.md  rl_square_deer_ablation_2026_07_08_zh.md  sac_oos_strict_results_2026_07_08_zh.md  sac_replay_update_en.md  sac_replay_update_zh.md  sac_risk_control_tuning_2026_07_07_zh.md  synthetic_market_experiment_report_zh.md
scripts/: download_dow30_recap_style.py  download_market_indices.py  generate_synthetic_market.py  make_regime_labels.py  run_deer_uniform_tuning.py  run_dqn_replay.py  run_rl_library.py  run_sac_oos.py  (+1 more)
(+17 files in other folders)
