[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-aware-replay-research"
version = "0.1.0"
description = "Regime labelers and replay-contamination diagnostics for non-stationary financial RL research."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.scripts]
make-regime-labels = "regime_labeling.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

